# aifr

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MIGRATION_v1.0_to_v1.1.md  Makefile  README.md  RELEASE_v1.2.0.md  RELEASE_v1.3.0.md  config.json.example  mkdocs.yml  pyproject.toml  run_tests.sh  specify.md
.github/workflows/: main.yml  mkdocs.yml
aifr/: __init__.py  agent_controller.py  api.py  cli.py  cli_old.py  cli_parser.py  command_parser.py  config.py  context.py  executor.py  file_loader.py  gradient_display.py  markdown_renderer.py  model_selector.py  output.py  providers.py  rag.py  session_store.py  terminal_capture.py
docs/: index.md
docs/features/: agents.md  colors.md
docs/guides/: agent_development.md  configuration.md
docs/releases/: v1.0.0.md  v1.1.0.md  v1.3.0.md
tests/: __init__.py  conftest.py  test_agent_controller.py  test_agent_routing.py  test_cli.py.deprecated  test_cli_parser.py  test_command_parser.py.deprecated  test_context.py  test_executor.py  test_file_loader.py  test_gradient_display.py  test_markdown_renderer.py  test_output.py  test_providers.py  test_rag.py  test_smoke.py
